<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <!-- damit kann ich zwar config im parent teilen, aber ich werde von dem parent
         abhängig und kann das repo alleine nicht mehr bauen -->
    <!--parent>
        <groupId>de.orat.math</groupId>
        <artifactId>Gazelle</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent-->
    <groupId>de.orat.math</groupId>
    <version>1.0-SNAPSHOT</version>
    <artifactId>netbeans-ocga</artifactId>
    <packaging>nbm</packaging>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.netbeans.utilities</groupId>
                <!-- this plugin registers the nbm packaging type -->
                <artifactId>nbm-maven-plugin</artifactId>
                <version>14.4</version>
                <extensions>true</extensions>
                <!--configuration>
                    <useOSGiDependencies>true</useOSGiDependencies>
                </configuration-->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <!--version>3.8.1</version-->
                <!--version>3.13.0</version-->
                <version>3.14.1</version>
                <configuration>
                    <compilerArgument>-proc:full</compilerArgument>
                    <!--source>21</source>
                    <target>21</target-->
                    <!--compilerArgs>
                        <arg>-Xlint:unchecked</arg>
                    </compilerArgs-->
                    <compilerArgs>
                        <arg>-Xlint</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- benötigt für nbm packaging -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-api-annotations-common</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-api-templates</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-filesystems</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-loaders</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-nodes</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util-lookup</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util-ui</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-windows</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-text</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-core-multiview</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-awt</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-dialogs</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-editor-mimelookup</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-modules</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-api-lsp</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        
        <!-- wozu das denn -->
        <!--dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>2.13.14</version>
            <type>jar</type>
        </dependency-->
        
        <!-- nötig um einen Language-server in netbeans registrieren zu können
             für mimetypes unserer Programmiersprache -->
        <!--dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-api-debugger-jpda</artifactId>
            <version>RELEASE150</version>
            <type>jar</type>
        </dependency-->
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-extexecution</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-java-platform</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-projectapi</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-api-java-classpath</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-extexecution-base</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-editor-document</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-editor-lib2</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        
        <!-- The polyglot dependency is always required for Java embeddings.
             It contains the polyglot embedding APIs to include any polyglot language. -->
        <!--dependency>
            <groupId>org.graalvm.polyglot</groupId>
            <artifactId>polyglot</artifactId>
            <version>${graalvm.version}</version>
            <type>jar</type>
        </dependency-->
        <!-- brauche ich das wirklich - auskommentieren hat zu einem Fehler geführt -->
        <!-- ersetzt durch org.netbeans.libs.truffleapi-->
        <!--dependency>
            <groupId>org.graalvm.truffle</groupId>
            <artifactId>truffle-api</artifactId>
            <version>${graalvm.version}</version>
        </dependency-->
        <!-- das hinzufügen hat nichts gebracht, obwohl das im simpleLanuguage beispiel drin ist:
             https://github.com/graalvm/simplelanguage/blob/master/language/pom.xml
             und auch als runtime-dependency in ga selbst -->
        <!--dependency>
            <groupId>org.graalvm.truffle</groupId>
            <artifactId>truffle-runtime</artifactId>
            <version>${graalvm.version}</version>
            <scope>runtime</scope>
        </dependency-->
        
        <!-- language einhängen nur zur runtime fragezeichen, wird nur gefunden
             wenn type == jar -->
        <dependency>
            <groupId>de.dhbw.rahmlab</groupId>
            <artifactId>DSL4GA_Impl_Truffle</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
            <!--type>pom</type-->
            <!--scope>runtime</scope-->
        </dependency>
        <!-- damit die ganzen Sprachen gelistet werden ...-->
        <!--dependency>
             <groupId>org.graalvm.polyglot</groupId>
             <artifactId>languages-community</artifactId>
             <version>${graalvm.version}</version>
             <type>pom</type>
        </dependency-->
        
        <!-- https://mvnrepository.com/artifact/org.graalvm.tools/lsp -->
        
        <!-- Truffle Language Server backend API. -->
        <!--dependency>
            <groupId>org.graalvm.tools</groupId>
            <artifactId>lsp_api</artifactId>
            <version>${graalvm.version}</version>
        </dependency-->
        <!-- Core module of the polyglot Truffle Language Server backend impl -->
        <!-- brauchts damit LSPSupport baut -->
        <!-- import org.graalvm.tools.lsp.instrument.EnvironmentProvider;
             import org.graalvm.tools.lsp.server.ContextAwareExecutor;
             import org.graalvm.tools.lsp.server.LSPFileSystem;
             import org.graalvm.tools.lsp.server.TruffleAdapter;-->
        <dependency>
            <groupId>org.graalvm.tools</groupId>
            <artifactId>lsp-tool</artifactId>
            <version>${graalvm.version}</version>
            <type>jar</type>
        </dependency>
        <!-- language tooling like a sampling profiler and the chrome inspector support. -->
        <!--dependency>
             <groupId>org.graalvm.polyglot</groupId>
             <artifactId>tools-community</artifactId>
             <version>${graalvm.version}</version>
             <type>pom</type>
        </dependency-->
        <!-- brauche ich das neben lsp-tool oder brauche ich nur das fragezeichen 
             sollte indirekt schon über das POM von ga mit drin sein -->
        <!--dependency>
             <groupId>org.graalvm.polyglot</groupId>
             <artifactId>lsp-community</artifactId>
             <version>${graalvm.version}</version>
             <type>pom</type>
        </dependency-->
        
        <!-- hinzufügen, damit Code in einer normalen JavaVM läuft
             https://www.graalvm.org/22.2/reference-manual/js/RunOnJDK/
             https://github.com/graalvm/polyglot-embedding-demo/blob/main/pom.xml -->
        <!--dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>graal-sdk</artifactId>
            <version>${graalvm.version}</version-->
            <!--scope>runtime</scope-->
            <!--scope>system</scope-->
            <!-- könnte ich damit nicht das jar in das korrekte Verzeichnis kopieren -->
            <!--systemPath>${java.home}/lib/boot/graal-sdk.jar</systemPath-->
        <!--/dependency-->
        <!--dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>collections</artifactId>
            <version>${graalvm.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>word</artifactId>
            <version>${graalvm.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.graalvm.truffle</groupId>
            <artifactId>truffle-compiler</artifactId>
            <version>${graalvm.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.graalvm.compiler</groupId>
            <artifactId>compiler</artifactId>
            <version>${graalvm.version}</version>
            <type>jar</type>
        </dependency-->
                                    
                                    
                                    
        <!-- hinzufügen hat nichts gebracht, -->
        <dependency>
            <groupId>de.orat.math.view</groupId>
            <artifactId>EuclidView3d</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>runtime</scope>
        </dependency>
        <!--dependency>
            <groupId>de.dhbw.rahmlab</groupId>
            <artifactId>DSL4GA_API</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency-->
        <!--dependency>
            <groupId>de.dhbw.rahmlab</groupId>
            <artifactId>DSL4GA_Common</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency-->
        <dependency>
            <groupId>de.orat.math.cga</groupId>
            <artifactId>ConformalGeometricAlgebra</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <!-- indirect dependency introduced via ConformalGeometricAlgebra -->
        <dependency>
            <groupId>de.orat.math.ga</groupId>
            <artifactId>GeometricAlgebra</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
                
        <dependency>
            <groupId>de.orat.view3d</groupId>
            <artifactId>Euclid3DViewAPI</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.jogamp.java3d</groupId>
            <artifactId>vecmath</artifactId>
            <version>1.7.1</version>
            <type>jar</type>
        </dependency>
        
        
        
        <!-- da steht truffle.MIMETypes drin ... ocgaDataObject...-->
        <!--dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-debugger-jpda-truffle</artifactId>
            <version>${netbeans.version}</version>
        </dependency-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.14.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
            <!--type>pom.sha512</type-->
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>26.0.2</version>
            <!--type>jar.asc.sha256</type>
            <classifier>common</classifier-->
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-textmate-lexer</artifactId>
            <version>RELEASE270</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.5.0-jre</version>
            <!--scope>runtime</scope>
            <type>pom.sha512</type-->
            <type>jar</type>
        </dependency>
    </dependencies>
    
    <!-- muessen hier explizit erneut definiert werden, werden also nicht aus dem
         parent module übernommen, das parent nur aggregation macht und nicht hier
         referenziert werden kann, sonst könnte das modul nicht mehr alternativ ohne das parent
         module gebaut werden. -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>24</maven.compiler.release>
        
        <!--maven.compiler.release>17</maven.compiler.release-->
        <!-- das passt zu /home/oliver/graalvm-jdk-21.0.4+8.1/bin/java -->
        <!--graalvm.version>23.1.4</graalvm.version-->
        <!-- das passt zu graalvm-jdk-23.0.1+11.1/bin/java -->
        <graalvm.version>24.1.1</graalvm.version>
        <netbeans.version>RELEASE270</netbeans.version>
    </properties>
    
    <name>netbeans-ocga</name>
    <description>ocga support, also starts the language server</description>
</project>